css/cards.css
@import url("https://fonts.googleapis.com/css?family=Montserrat");
@import url("https://fonts.googleapis.com/css?family=Open+Sans");

body {
  background-color: #343436;
}

.src {
  width: 100vw;
  /* padding-top: 300px; */
  position: relative;
}


.content-wrapper {
  width: 300px;
  max-height: 530px;
  border-radius: 5px;
  box-shadow: 0 2px 30px rgba(0, 0, 0, 0.2);
  background: #fbfcee;
  position: relative;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  overflow: hidden;
  text-align: center;
  margin-top: 10px;
}

.content-wrapper::-webkit-scrollbar {
  display: none;
}

.content-wrapper .img {
  width: 302px;
  height: 350px;
  position: relative;
  overflow: hidden;
}

.content-wrapper .img::after {
  content: "";
  display: block;
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  background: linear-gradient(to top, rgba(88, 81, 219, 0.25), transparent);
}

.content-wrapper img {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 100%;
  object-fit: contain;
}

.menu-bar-wrapper {
  position: absolute;
  bottom: 0;
  width: 100%;
  overflow: hidden;
}

.menu-bar,
.nav-bar {
  display: flex;
  justify-content: space-around;
  align-items: center;
  width: 100%;
  background-color: #5851db;
  transform: translateY(110%);
  transition: all 0.455s;
}

.menu-bar.active,
.nav-bar.active {
  transform: translateY(0%);
}

.menu-bar i,
.nav-bar i {
  color: rgba(250, 250, 254, 0.5);
  padding: 14px;
  transition: all 0.255s;
  cursor: pointer;
}

.menu-bar i.active,
.nav-bar i.active {
  color: white;
}

.menu-bar i:hover,
.nav-bar i:hover {
  color: white;
}

.nav-bar {
  background-color: #343436;
  transform: translateY(0%);
}

.nav-bar i {
  color: rgba(255, 255, 255, 0.35);
  padding: 14px;
  transition: all 0.255s;
  cursor: pointer;
}

.nav-bar i.active {
  color: white;
}

.nav-bar i:hover {
  color: #5851db;
}

.dots-wrapper {
  cursor: pointer;
  padding: 5px;
  height: 20px;
  position: absolute;
  right: 15px;
  top: 15px;
  z-index: 2;
}

.dots {
  background-color: #5851db;
  width: 4px;
  height: 4px;
  border-radius: 100%;
  position: absolute;
  top: 0;
}

.dots::after,
.dots::before {
  content: "";
  margin-top: 6px;
  display: block;
  width: 4px;
  border-radius: 100%;
  height: 4px;
  background-color: #5851db;
}

.dots::after {
  margin-top: 2px;
}

.wave {
  opacity: 0.4;
  position: absolute;
  left: 50%;
  background: #bc2a8d;
  width: 500px;
  height: 500px;
  margin-left: -250px;
  margin-top: -80px;
  transform-origin: 50% 48%;
  border-radius: 43%;
  animation: drift 5000ms infinite linear;
}

.wave.-three {
  animation: drift 7000ms infinite linear;
  background: white;
  opacity: 1;
}

.wave.-two {
  animation: drift 9000ms infinite linear;
  opacity: 0.4;
  background: #ffdc80;
}

.profile--info {
  text-align: left;
}

.profile--info span {
  font-family: "Open Sans", "Adobe Blank";
  z-index: 1;
  left: 15px;
  top: 15px;
  font-size: 0.575em;
  color: rgba(84, 95, 89, 0.75);
  display: block;
}

.profile--info span.username {
  font-weight: 700;
  font-style: normal;
  font-size: 1.25em;
  color: black;
}

.profile--info span.userquote {
  margin-top: -15px;
  font-size: 0.85em;
  color: rgba(84, 95, 89, 0.75);
}

.user {
  background-color: white;
  width: 100%;
  margin-top: 0;
  max-height: 600px;
  position: relative;
  padding: 0 30px;
  box-sizing: border-box;
  top: -50px;
}

.user-social-wrapper {
  display: flex;
  justify-content: space-around;
  position: relative;
  margin: 20px 0;
  padding: 17px 0;
}

.user-social-wrapper::after,
.user-social-wrapper::before {
  content: "";
  display: block;
  position: absolute;
  top: 0;
  width: 100%;
  height: 1px;
  background-color: rgba(241, 193, 226, 0.5);
}

.user-social-wrapper::before {
  top: initial;
  bottom: 0;
}

.user-social-wrapper .user-info {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  font-weight: 200;
  flex: 1 1;
}

.user-social-wrapper .user-info span:first-child {
  font-size: 1.25em;
}

.user-social-wrapper .user-info span:last-child {
  font-size: 0.75em;
  color: rgba(84, 95, 89, 0.75);
}

.shots {
  width: calc(100% + 60px);
  margin-left: -30px;
  position: relative;
  display: flex;
  flex-wrap: wrap;
}

.shots .shot {
  overflow: hidden;
  position: relative;
  width: 100px;
  height: 100px;
}

.shots .shot::after {
  content: "";
  display: block;
  opacity: 0;
  transition: all 0.255s;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
}

.shots .shot:hover::after {
  opacity: 1;
}

.shots .shot:hover img {
  transform: translate(-50%, -50%) scale(1.25);
}

.shots .shot img {
  transition: all 0.255s;
  width: 102px;
}

@keyframes drift {
  from {
    transform: rotate(0deg);
  }

  from {
    transform: rotate(360deg);
  }
}

@media (min-width:300px) and (max-width:900px)  {
  .content-wrapper {
    left: 50%;
  }
  #particles-js {
    top: -334px;
  }
  .banner-title {
    top: 580px !important;
    /* color: white; */
    font-size: 46px !important;
  }
}

